--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-ci": "npm run clean && npm test",
     "prepare": "npm run build",
     "clean": "rimraf dist",
-    "postinstall": "node scripts/post-install.js",
+    "_postinstall": "node scripts/post-install.js",
     "prepublishOnly": "npm test && pinst --disable",
     "postpublish": "pinst --enable",
     "build": "npm run clean && rollup -c",
