chore: initial commit

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test-ci": "npm run clean && npm test",
     "prepare": "npm run build",
     "clean": "rimraf dist",
-    "_postinstall": "node scripts/post-install.js",
+    "postinstall": "node scripts/post-install.js",
     "prepublishOnly": "npm test && pinst --disable",
-    "postpublish": "pinst --enable",
+    "postpublish": "pinst --enable && git add package.json",
     "build": "npm run clean && rollup -c",
     "dev": "npm run build -- -w",
     "doc": "documentation --github --markdown-toc=false readme index.js -a public -s \"API\" && git add README.md",
